# AngstromPro

./: .gitignore  CITATION.cff  GuiVarManager.py  README.md  main.py  pyproject.toml  uds3D_RtSynthesis.data.npy
ScienceY/: __init__.py  config.py  qt_compt.py
ScienceY/GUI/: ColorBar.py  ColorMapEditorWidget.py  ConfigManager.py  DataBrowser.py  FileSystemTree.py  GalleryContentWidget.py  GuiFrame.py  Image2Uds3.py  Image2Uds3Widget.py  ImageUdsData2or3D.py  ImageUdsData2or3DWidget.py  Plot1DWidget.py  Plot1Uds2.py  Plot1Uds2Widget.py  PlotConfig.py  PlotConfigWidget.py  PreferenceI2U3.py  PreferenceIUD2or3D.py  ProcessParameters.py  RtSynthesis2D.py  RtSynthesis2Uds3.py  ScaleWidget (1).py  ScaleWidget.py  SnapshotManager.py  __init__.py
ScienceY/GUI/customizedColorPallets/: Flame.txt  GOLD.txt  Green1.txt  LIMEGREEN.txt  Pinkskal.txt  SailingMod2.txt  Yellow.txt  defect2.txt  iceburg.txt  phase1.txt
ScienceY/GUI/customizedWidgets/: DockWidget.py  RangeSlider (1).py  RangeSlider.py  ScrollArea.py  SimplifiedNumberLineEditor.py
ScienceY/GUI/general/: NumberExpression.py  RegExpSimplifedNumber.py
ScienceY/ImageProcess/: BackgroundSubtract.py  CrossCorrelation.py  ExtendSmallRegion.py  FourierFilter.py  GapMap.py  GeometricOperation.py  ImgProc.py  LFCorrection.py  LineAndCircleCut.py  LineWidth.py  LockIn2D.py  PerfectLattice.py  PixelInterpolation.py  Register.py  StatisticCrossCorrelation.py  __init__.py
ScienceY/ImageSimulate/: GenerateCurve2D.py  GenerateLattice2D.py  ImgSimu.py  __init__.py
ScienceY/ImgProcCustomized/: ImgProcCustomized.py
ScienceY/RawDataProcess/: DataFileRW.py  LFDataProcess.py  MatDataProcess.py  NanonisDataProcess.py  NpyDataProcess.py  TxtDataProcess.py  UdsDataProcess.py  UdsDataStru.py  __init__.py
ScienceY/config/: DataBrowser.txt  GuiVarManager.txt  ImageUdsData2or3D.txt
docs/: README.md
docs/developer-guide/: architecture.md  configuration.md  contributing.md  data-model.md  io-handlers.md  modules.md  plugins.md  processes.md  tasks.md  workspaces.md
docs/user-guide/: curve-stack-viewer.md  data-browser.md  file-formats.md  getting-started.md  image-stack-viewer.md  planewave-synthesiser.md  preferences.md  processes.md  troubleshooting.md  workspaces-and-inspector.md
examples/example_plugin/: README.md  pyproject.toml  sample.apdemo
examples/example_plugin/src/angstrompro_example/: __init__.py  io.py  module.py  processes.py
src/angstrompro/: initMagic.ipy
src/angstrompro/algorithms/: __init__.py  background_subtract.py  crop.py  crop2d.py  cross_correlation.py  extend_region.py  extract_layer.py  fft.py  fft_filter.py  gap_map.py  geometric_operation.py  integral.py  interpolation.py  isocontour.py  lf_correction.py  line_circle_cut.py  lock_in.py  lock_in_2d.py  math_ops.py  normalization.py  perfect_lattice.py  pixel_interpolation.py  r_map.py  register.py  rotate.py  rotate2d.py  simulate.py  smooth.py  smooth1d.py  spatial_mask.py  symmetrize.py  transpose.py
src/angstrompro/app/: app_path.py  app_signals.py  context.py  main.py  user_data_folder.py
src/angstrompro/core/: __init__.py
src/angstrompro/core/configs/: __init__.py  config_manager.py  config_paths.py  config_validation.py  plugin_config.py
src/angstrompro/core/data/: __init__.py  annotation_data.py  base.py  data_scene.py  isocontour_data.py  scene_plot.py  thumbnail_registry.py  uds_data.py
src/angstrompro/core/modules/: __init__.py  a_gui_module.py  a_headless_module.py  a_module.py  a_module_manager.py  module_mixin.py
src/angstrompro/core/processes/: __init__.py  param_history.py  param_schema.py  process_bridge.py  process_entry.py  process_registry.py  process_runner.py  registry.py
src/angstrompro/core/tasks/: __init__.py  cancel_token.py  persistent_worker_executor.py  pool_executor.py  task_context.py  task_dispatcher.py  task_handle.py  task_manager.py  task_request.py  worker_executor.py
src/angstrompro/core/workspaces/: __init__.py  workspace.py  workspace_item.py  workspace_manager.py
src/angstrompro/gui/: child_test_bench.py  config_editor_widget.py  task_demo.py  transfer_target_editor.py
src/angstrompro/gui/appearance/: __init__.py  icon_manager.py  theme_manager.py  typography.py
src/angstrompro/gui/dialogs/: about_dialog.py  channel_manager_dialog.py  channel_picker_dialog.py  export_figure_dialog.py  export_image_dialog.py  export_video_dialog.py  extract_curves_dialog.py  format_browser_dialog.py  persistent_dialog.py  process_browser_dialog.py  process_menu_config_dialog.py  process_param_dialog.py  send_item_dialog.py  set_default_targets_dialog.py  unmatched_channels_dialog.py  user_data_folder_dialog.py
src/angstrompro/gui/modules/: __init__.py  child_test_bench.py  curve_stack_viewer.py  image_stack_viewer.py  planewave_synthesiser.py  rt_synthesis.py
src/angstrompro/gui/utils/: __init__.py  file_loading.py
src/angstrompro/gui/widgets/: ColorMapEditorWidget.py  ScaleWidget.py  channel_manager_widget.py  color_bar.py  config_editor_widget.py  image_stack_viewer_widget.py  live_module_card.py  live_modules_panel.py  log_panel.py  ndarray_editor_dialog.py  scene_plot_renderer.py  task_dashboard.py  workspace_item_inspector.py
src/angstrompro/gui/workbench/: main_workbench.py
src/angstrompro/io/: __init__.py  angstrom_io.py  channel_manager.py  migration.py  scene_io.py  scene_plot_io.py  uds_io.py
src/angstrompro/io/formats/: __init__.py  (+7 more)
src/angstrompro/utils/: platform_utils.py  qt_compat.py
(+81 files in other folders)
